--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@
 /[Bb]uilds/
 /[Ll]ogs/
 /[Uu]ser[Ss]ettings/
+[Bb]in/
+[Oo]bj/
+__pycache__/
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
